--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -6,6 +6,7 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: ${EUREKA_URI:http://eureka-service-container:8761/eureka}
+      defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
+      #defaultZone: ${EUREKA_URI:http://eureka-service-container:8761/eureka}
   instance:
     preferIpAddress: true
