--- a/gateway-service/src/main/resources/application.properties
+++ b/gateway-service/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=api-gateway
+server.port=8080
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 #spring.cloud.loadbalancer.ribbon.enabled=false
 spring.cloud.gateway.routes[0].id=health-service
 spring.cloud.gateway.routes[0].uri=lb://health-service
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/health-service/**
+eureka.client.serviceUrl.defaultZone: http://discovery-service-container:8761/eureka
 eureka.instance.instance-id=${spring.application.name}:${random.uuid}
