--- a/health-service/src/main/resources/application.properties
+++ b/health-service/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/health-service
+#spring.datasource.url=jdbc:mysql://localhost:3306/health-service
+spring.datasource.url=jdbc:mysql://db:3306/health-service
 spring.datasource.username=root
 spring.datasource.password=asdf1235
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
@@ -8,4 +9,5 @@ spring.sql.init.mode=always
 spring.jpa.show-sql=true
 server.port=8081
 eureka.instance.instance-id=${spring.application.name}:${random.uuid}
+eureka.client.serviceUrl.defaultZone: http://discovery-service-container:8761/eureka
 spring.application.name=health-service
