--- a/health-service/src/main/resources/application.properties
+++ b/health-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.url=jdbc:mysql://localhost:3306/health-service
-spring.datasource.url=jdbc:mysql://db:3306/health-service
+spring.datasource.url=jdbc:mysql://mysql-container:3306/health-service
 spring.datasource.username=root
 spring.datasource.password=asdf1235
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
