--- a/gateway-service/src/main/resources/application.properties
+++ b/gateway-service/src/main/resources/application.properties
@@ -3,8 +3,16 @@ server.port=8080
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 #spring.cloud.loadbalancer.ribbon.enabled=false
+spring.cloud.gateway.default-filters=TokenRelay
 spring.cloud.gateway.routes[0].id=health-service
 spring.cloud.gateway.routes[0].uri=lb://health-service
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/health-service/**
-eureka.client.serviceUrl.defaultZone: http://discovery-service-container:8761/eureka
+#docker
+#eureka.client.serviceUrl.defaultZone: http://discovery-service-container:8761/eureka
+#localhost
+eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka
 eureka.instance.instance-id=${spring.application.name}:${random.uuid}
+
+okta.oauth2.issuer=https://dev-81807076.okta.com/oauth2/default
+okta.oauth2.client-secret=ikO0_jG01P1JKFJ_cy2RIlERK5znVFxRnqOMCO5a
+okta.oauth2.client-id=0oa4wli4bn6gDlljO5d7
