--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,8 @@ services:
         image: health-project/health-service
         ports:
             - "8081:8081"
+        environment:
+            SPRING_DATASOURCE_URL: jdbc:mysql://zutbasement.synology.me:3306/health-service?autoReconnect=true&useSSL=false
         networks:
             - "microservicenetwork"
   
