połączenie z wersją na dockerze

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,8 @@ services:
             - "8081:8081"
         environment:
             SPRING_DATASOURCE_URL: jdbc:mysql://zutbasement.synology.me:3306/health-service?autoReconnect=true&useSSL=false
+            SPRING_DATASOURCE_USERNAME: root
+            SPRING_DATASOURCE_PASSWORD: asdf1235
         networks:
             - "microservicenetwork"
   
