--- a/gateway-service/src/main/resources/application.properties
+++ b/gateway-service/src/main/resources/application.properties
@@ -1,3 +1,15 @@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#localhost
+spring.datasource.url=jdbc:mysql://localhost:3306/health-service
+#docker
+#spring.datasource.url=jdbc:mysql://mysql-container:3306/health-service
+spring.datasource.username=root
+spring.datasource.password=asdf1235
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=none
+spring.sql.init.mode=always
+spring.jpa.show-sql=true
+
 spring.application.name=api-gateway
 server.port=8080
 spring.cloud.gateway.discovery.locator.enabled=true
@@ -16,3 +28,6 @@ eureka.instance.instance-id=${spring.application.name}:${random.uuid}
 okta.oauth2.issuer=https://dev-81807076.okta.com/oauth2/default
 okta.oauth2.client-secret=ikO0_jG01P1JKFJ_cy2RIlERK5znVFxRnqOMCO5a
 okta.oauth2.client-id=0oa4wli4bn6gDlljO5d7
+
+
+
