--- a/gateway-service/src/main/resources/application.properties
+++ b/gateway-service/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #localhost
-spring.datasource.url=jdbc:mysql://localhost:3306/health-service
+#spring.datasource.url=jdbc:mysql://localhost:3306/health-service
 #docker
 #spring.datasource.url=jdbc:mysql://mysql-container:3306/health-service
+#server
+spring.datasource.url=jdbc:mysql://zutbasement.synology.me:3306/health-service
 spring.datasource.username=root
 spring.datasource.password=asdf1235
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
