--- a/health-service/src/main/resources/application.properties
+++ b/health-service/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #localhost
-spring.datasource.url=jdbc:mysql://localhost:3306/health-service
-eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka
+#spring.datasource.url=jdbc:mysql://localhost:3306/health-service
+#eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka
 #docker
 #spring.datasource.url=jdbc:mysql://mysql-container:3306/health-service
 #eureka.client.serviceUrl.defaultZone: http://discovery-service-container:8761/eureka
+#server
+spring.datasource.url=jdbc:mysql://zutbasement.synology.me:3306/health-service
 spring.datasource.username=root
 spring.datasource.password=asdf1235
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
