--- a/gateway-service/src/main/resources/application.properties
+++ b/gateway-service/src/main/resources/application.properties
@@ -1,17 +1,3 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#localhost
-#spring.datasource.url=jdbc:mysql://localhost:3306/health-service
-#docker
-#spring.datasource.url=jdbc:mysql://mysql-container:3306/health-service
-#server
-spring.datasource.url=jdbc:mysql://zutbasement.synology.me:3306/health-service
-spring.datasource.username=root
-spring.datasource.password=asdf1235
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=none
-spring.sql.init.mode=always
-spring.jpa.show-sql=true
-
 spring.application.name=api-gateway
 server.port=8080
 spring.cloud.gateway.discovery.locator.enabled=true
@@ -22,14 +8,11 @@ spring.cloud.gateway.routes[0].id=health-service
 spring.cloud.gateway.routes[0].uri=lb://health-service
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/health-service/**
 #docker
-#eureka.client.serviceUrl.defaultZone: http://discovery-service-container:8761/eureka
+eureka.client.serviceUrl.defaultZone= http://discovery-service-container:8761/eureka
 #localhost
-eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka
+#eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka
 eureka.instance.instance-id=${spring.application.name}:${random.uuid}
 
 okta.oauth2.issuer=https://dev-81807076.okta.com/oauth2/default
 okta.oauth2.client-secret=ikO0_jG01P1JKFJ_cy2RIlERK5znVFxRnqOMCO5a
 okta.oauth2.client-id=0oa4wli4bn6gDlljO5d7
-
-
-
