--- a/health-service/src/main/resources/application.properties
+++ b/health-service/src/main/resources/application.properties
@@ -16,6 +16,6 @@ eureka.instance.instance-id=${spring.application.name}:${random.uuid}
 
 spring.application.name=health-service
 
-okta.oauth2.issuer=https://dev-81807076.okta.com/oauth2/default
-okta.oauth2.client-secret=ikO0_jG01P1JKFJ_cy2RIlERK5znVFxRnqOMCO5a
-okta.oauth2.client-id=0oa4wli4bn6gDlljO5d7
+#okta.oauth2.issuer=https://dev-81807076.okta.com/oauth2/default
+#okta.oauth2.client-secret=ikO0_jG01P1JKFJ_cy2RIlERK5znVFxRnqOMCO5a
+#okta.oauth2.client-id=0oa4wli4bn6gDlljO5d7
