--- a/health-service/src/main/resources/application.properties
+++ b/health-service/src/main/resources/application.properties
@@ -1,13 +1,10 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
 #localhost
 #spring.datasource.url=jdbc:mysql://localhost:3306/health-service
-#eureka.client.serviceUrl=  http://localhost:8761/eureka
-
-#server
-eureka.client.serviceUrl=  http://discovery-service-container:8761/eureka
-eureka.client.serviceUrl.defaultZone= http://discovery-service-container:8761/eureka
+#eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka
+#docker
 spring.datasource.url=jdbc:mysql://zutbasement.synology.me:3306/health-service
+eureka.client.serviceUrl.defaultZone= http://discovery-service-container:8761/eureka
 spring.datasource.username=root
 spring.datasource.password=asdf1235
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
@@ -19,6 +16,6 @@ eureka.instance.instance-id=${spring.application.name}:${random.uuid}
 
 spring.application.name=health-service
 
-okta.oauth2.issuer=https://dev-81807076.okta.com/oauth2/default
-okta.oauth2.client-secret=ikO0_jG01P1JKFJ_cy2RIlERK5znVFxRnqOMCO5a
-okta.oauth2.client-id=0oa4wli4bn6gDlljO5d7
+#okta.oauth2.issuer=https://dev-81807076.okta.com/oauth2/default
+#okta.oauth2.client-secret=ikO0_jG01P1JKFJ_cy2RIlERK5znVFxRnqOMCO5a
+#okta.oauth2.client-id=0oa4wli4bn6gDlljO5d7
